Fix issue where color-picker would break if initialized in an element not currently visible

--- a/src/css/simple-color-picker.styl
+++ b/src/css/simple-color-picker.styl
@@ -1,15 +1,11 @@
-pickerSize = 150px
 pickerHueWidth = 20px
 
 .Scp
-  width pickerSize + pickerHueWidth + 5px
-  height pickerSize
   user-select none
   position relative
 
 .Scp-saturation
   position relative
-  width calc(100% - 25px)
   height 100%
   background linear-gradient(to right, #FFFFFF, #FF0000);
   float left
